# CLI-Tool

./: .gitignore  FINAL_FIX_SUMMARY.md  Makefile  NESTJS_GENERATION_FIXES.md  NPM_STYLE_COMMANDS.md  POWERSHELL_QUICKSTART.md  QUICKSTART.md  QUICK_FIX_REFERENCE.md  README.md  SETUP_GUIDE.txt  code.py  complete_boilerplate.py  config.py  fix_django_boilerplate.py  main.py  package.json  pyproject.toml  requirements.txt  scripts.bat  scripts.ps1  setup.py  temp_add_rbac.py  test_installation.py  test_nestjs_generation.py
.kiro/specs/fix-nestjs-generation/: design.md  requirements.md  tasks.md
files/: DJANGO_BOILERPLATE.md  NESTJS_BOILERPLATE.md  REACT_NATIVE_BOILERPLATE.md  REACT_NEXT_BOILERPLATE.md  README.md
final_core_fix/: .env.example  README.md  manage.py  requirements.txt  run_local.bat
final_core_fix/config/: urls.py
final_core_fix/config/settings/: base.py
final_core_fix/core/: settings.py
final_core_fix/services/: mail_service.py
geninit/: ai.py  file_utils.py  main.py  main_template.py  models.py  project_generator.py  prompts.py  rules.json  template_parser.py
je/: README.md  package.json
je/src/: app.module.ts  complete-application-setup.ts  log.controller.ts  main.ts  main.ts or app.module.ts  order.service.ts  testing.ts
node/: .env.example  README.md  package.json
node/src/: app.module.ts  log-entry.entity.ts  log.controller.ts  main.ts  main.ts or app.module.ts  order.service.ts  roles.guard.ts  testing.ts  user.controller.ts  user.service.ts
public/: index.html
services/: mail_service.py  notification_channels.py  notification_service.py  upload_service.py
src/: App.css  App.jsx  index.css
(+29 files in other folders)
