[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "geninit"
version = "1.0.0"
description = "AI-powered project scaffolding tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["scaffolding", "code-generation", "boilerplate", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "email_validator>=2.1.0",
    "typer>=0.9.0",
    "InquirerPy>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
geninit = "geninit.main:app"

[project.urls]
Homepage = "https://github.com/yourusername/geninit"
Documentation = "https://github.com/yourusername/geninit#readme"
Repository = "https://github.com/yourusername/geninit"
"Bug Tracker" = "https://github.com/yourusername/geninit/issues"

[tool.setuptools]
packages = ["geninit"]

[tool.setuptools.package-data]
geninit = ["*.json", "rules.json"]
